[TASK] Widget overflow fix (RT-3113)

--- a/src/less/ripple/landing.less
+++ b/src/less/ripple/landing.less
@@ -49,7 +49,8 @@ header.loggedOut {
 	  background-attachment: fixed;
 	  z-index: 1;
 	  background-color: #4c8db8; /* Old browsers */
-	  height: 880px;
+	  // height: 880px;
+	  height: auto;
 	  
 		
 		 // Pixel ratio: 2
@@ -62,12 +63,13 @@ header.loggedOut {
       background-attachment: fixed;
       z-index: 1;
       background-size: 100%;
-      height: 880px; 
+      // height: 880px; 
+      height: auto; 
     }
 	}
 
 	.loginContainer {
-		height: 880px;
+		height: auto;
 		max-width: 1400px;
 		margin: auto;
 			
